[package]
name = "dht-crawler"
version = "0.1.0"
authors = ["Martin Charles <martincharles07@gmail.com>"]

[dependencies]
serde = "1.0.79"
serde_derive = "1.0.79"
serde_bencode = { git = "https://github.com/0xcaff/serde-bencode.git" }
serde_bytes = "0.10.4"
byteorder = "1.2.6"
failure_derive = "0.1.2"
failure = "0.1.2"
tokio = "0.1.8"
futures = "0.1.24"
hex = "0.3.2"
bytes = "0.4.10"

[dev-dependencies]
serde_test = "1.0.79"

